--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,11 +61,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\ChestDemo.cs" />
+    <Compile Include="Assets\Editer\Editer.cs" />
+    <Compile Include="Assets\Script\MapCreate.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\Rotator.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\MaterialMover.cs" />
-    <Compile Include="Assets\Script\MapGenerater.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\WheelController.cs" />
-    <Compile Include="Assets\Script\MapData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\AurynSky\Forest Pack\READ ME.txt" />
