--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,9 +65,10 @@
     <Compile Include="Assets\Editer\Editer.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\Rotator.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\WheelController.cs" />
-    <Compile Include="Assets\Script\Spawn\SpawnPoint.cs" />
-    <Compile Include="Assets\Script\MapCreate.cs" />
+    <Compile Include="Assets\Script\FieldSetUp\FieldSetUp.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\MaterialMover.cs" />
+    <Compile Include="Assets\Script\FieldSetUp\MapCreate.cs" />
+    <Compile Include="Assets\Script\FieldSetUp\characterSpawn.cs" />
     <Compile Include="Assets\Script\Player\PlayerMove.cs" />
   </ItemGroup>
   <ItemGroup>
