--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,14 +63,19 @@
   <ItemGroup>
     <Compile Include="Assets\Script\CharacterData\EnemysData.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\ChestDemo.cs" />
+    <Compile Include="Assets\Script\Enemy\Enemy.cs" />
     <Compile Include="Assets\Editer\Editer.cs" />
+    <Compile Include="Assets\Script\EventManager\TurnManager.cs" />
     <Compile Include="Assets\Script\CharacterData\ItemData.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\Rotator.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\WheelController.cs" />
-    <Compile Include="Assets\Script\FieldSetUp\FieldSetUp.cs" />
+    <Compile Include="Assets\Script\Player\PlayerAttack.cs" />
+    <Compile Include="Assets\Script\FieldSetUp\FieldSetUpManager.cs" />
+    <Compile Include="Assets\Script\Player\Player.cs" />
+    <Compile Include="Assets\Script\CharacterData\Character.cs" />
     <Compile Include="Assets\Script\CharacterData\PlayerData.cs" />
     <Compile Include="Assets\AurynSky\Forest Pack\Scripts\MaterialMover.cs" />
-    <Compile Include="Assets\Script\FieldSetUp\MapCreate.cs" />
+    <Compile Include="Assets\Script\FieldSetUp\MapGenerator.cs" />
     <Compile Include="Assets\Script\FieldSetUp\characterSpawn.cs" />
     <Compile Include="Assets\Script\Player\PlayerMove.cs" />
   </ItemGroup>
