--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -10,7 +10,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{3B4D7A7B-B193-C7B8-731F-3F701A73DF6D}</ProjectGuid>
+    <ProjectGuid>{771772F5-4A6F-BC96-AFA5-CCF89A60ABDF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -59,35 +59,36 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.23f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.SourceGenerators.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.23f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.Properties.SourceGenerator.dll" />
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.23f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
-    <Analyzer Include="C:\Users\Enuar\OneDrive\ドキュメント\Roguelike\Library\PackageCache\com.unity.dt.app-ui\Runtime\SourceGenerators\netstandard2.0\EnumToLowerCase.dll" />
+    <Analyzer Include="C:\Users\vantan\Desktop\Unity\RoguelikeGame\Library\PackageCache\com.unity.dt.app-ui\Runtime\SourceGenerators\netstandard2.0\EnumToLowerCase.dll" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\Characters\Enemy\EnemyMove.cs" />
+    <Compile Include="Assets\AurynSky\Forest Pack\Scripts\ChestDemo.cs" />
     <Compile Include="Assets\Editer\Editer.cs" />
-    <Compile Include="Assets\AssetStoreTools\AurynSky\Forest Pack\Scripts\MaterialMover.cs" />
+    <Compile Include="Assets\Script\Camera\CameraFollowPlayer.cs" />
     <Compile Include="Assets\Script\FieldSetUp\MapSettings\MapGenerator.cs" />
-    <Compile Include="Assets\AssetStoreTools\AurynSky\Forest Pack\Scripts\Rotator.cs" />
+    <Compile Include="Assets\AurynSky\Forest Pack\Scripts\Rotator.cs" />
     <Compile Include="Assets\Script\Characters\Player\PlayerMove.cs" />
     <Compile Include="Assets\AssetStoreTools\SubClassSerecter\SubclassSelectorAttribute.cs" />
     <Compile Include="Assets\Script\Characters\Player\PlayerContrller.cs" />
+    <Compile Include="Assets\Script\Characters\Enemy\EnemyController.cs" />
+    <Compile Include="Assets\AurynSky\Forest Pack\Scripts\WheelController.cs" />
+    <Compile Include="Assets\Script\Player\PlayerController.cs" />
     <Compile Include="Assets\Script\FieldSetUp\MapSettings\characterSpawn.cs" />
-    <Compile Include="Assets\AssetStoreTools\AurynSky\Forest Pack\Scripts\ChestDemo.cs" />
     <Compile Include="Assets\Script\FieldSetUp\Manager\TurnManager.cs" />
     <Compile Include="Assets\Script\Characters\ItemGachaData.cs" />
     <Compile Include="Assets\Script\FieldSetUp\MapSettings\MapSettingManager.cs" />
-    <Compile Include="Assets\AssetStoreTools\AurynSky\Forest Pack\Scripts\WheelController.cs" />
     <Compile Include="Assets\Script\Characters\Player\PlayerAttack.cs" />
     <Compile Include="Assets\Script\Skill\Skill.cs" />
     <Compile Include="Assets\AssetStoreTools\SubClassSerecter\SubclassSelectorDrawer.cs" />
-    <Compile Include="Assets\Script\Characters\Enemy\Enemy.cs" />
-    <Compile Include="Assets\Script\Characters\Enemy\EnemyBaseData\EnemysBaseData.cs" />
+    <Compile Include="Assets\AurynSky\Forest Pack\Scripts\MaterialMover.cs" />
+    <Compile Include="Assets\Script\Characters\CharacterData\CharacterData.cs" />
     <Compile Include="Assets\Behavior\EnemyBehavior.cs" />
     <Compile Include="Assets\Script\Characters\Characters.cs" />
     <Compile Include="Assets\Script\Camera\CameraFollow.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\AssetStoreTools\AurynSky\Forest Pack\READ ME.txt" />
-    <None Include="Assets\AssetStoreTools\RPG Button 7\Readme.txt" />
+    <None Include="Assets\AurynSky\Forest Pack\READ ME.txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -1261,7 +1262,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
-      <Project>{EF327108-5BB7-5153-2982-DE06A8EFB570}</Project>
+      <Project>{CACA0BBA-FEAF-A471-D18F-3B12C0B65E1E}</Project>
       <Name>Assembly-CSharp-firstpass</Name>
     </ProjectReference>
   </ItemGroup>
